All the changes are documented on the git history, so here's just the major ones

24-02-13 v1.5:
	* Interface: Help window explaining controls, statistics showing
	             misc information about the game.
	* Gameplay: Smoother interface, color customizations, dozens of
	            bugs fixed, Windows version improved.

17-02-13 v1.4:
	* Gameplay: config file support! Also, we can pause the game now.
	* Interface: the player can customize some layout parts.
	* Licensing: yetris is now Free Software (GPLv3)!
	* Bugs: lots of minor ones killed.

12-02-13 v1.0:
	* Gameplay: added highscore, combo, back-to-back, and some other
	            stuff. It's pretty much functional now.
	* Interface: cleaned up a bit. It displays everything that need
	             to be displayed.
	* Released!

07-02-13 v0.7:
	* Interface: layout redesigned. 80 x 24 chars and can center the screen.
	* Gameplay: score, 5 next pieces, hold and improved ghost.

06-02-13 v0.4:
	* Intense development - most basic features done.
	* Ghost piece.

05-02-13 v0.0:
	* Beginning: started coding the project.
	* Interface: printed all the main windows with ncurses.
