@@ -50,7 +50,8 @@ To see more info, run 'yetris --help' and 'yetris --usage'.
 	z, x                Rotates the piece counter-clockwise and clockwise
 	p                   Pauses the game
 	q                   Quits the game at any time
-	h                   Show help window.
+	r                   Restart game
+	h                   Show help window
 	F2                  Switch statistics
 	F3                  Show high scores
 	F5                  Refresh game based on config file
