@@ -66,6 +66,8 @@ understanding and easing feature-implementation.
 
 .BR "h                   " "Show help window"
 
+.BR "r                   " "Restart game"
+
 .BR "F2                  " "Switch statistics"
 
 .BR "F3                  " "Show high scores"
